--- a/frontend-pos/src/app/features/products/products.component.html
+++ b/frontend-pos/src/app/features/products/products.component.html
@@ -1,1 +1,3 @@
-<p>products works!</p>
+<span class="home-item-container">
+  <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
+</span>
