Styles category list

--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
@@ -65,6 +65,7 @@ mat-sidenav-container {
   mat-sidenav-content {
     height: 92vh;
     overflow-y: auto;
+    background-color: $gray-lightest;
     //background-color: transparent;
   }
 }
