--- a/frontend-pos/src/app/features/products/products.component.html
+++ b/frontend-pos/src/app/features/products/products.component.html
@@ -1,3 +1,4 @@
+<pos-category-list [categories]="categories" ></pos-category-list>
 <span class="home-item-container">
   <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
 </span>
