--- a/frontend-pos/src/app/features/products/products.component.scss
+++ b/frontend-pos/src/app/features/products/products.component.scss
@@ -2,8 +2,15 @@ span.home-item-container {
   padding: 0 10px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  //grid-template-rows: repeat(auto-fill, 250px);
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
+  overflow-y: auto;
+  height: 100%;
+}
+
+pos-category-list {
+  height: 40px;
+  display: block;
+  margin: 5px 0;
 }
