--- a/frontend-pos/src/app/features/products/item-card/item-card.component.scss
+++ b/frontend-pos/src/app/features/products/item-card/item-card.component.scss
@@ -53,7 +53,7 @@ div.item-card-container {
     width: 100%;
     height: 20px;
     min-height: 20px;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .title-infinite-cycling {
       &:hover {
