--- a/frontend-pos/src/app/features/products/category-list/category-list.component.html
+++ b/frontend-pos/src/app/features/products/category-list/category-list.component.html
@@ -1,8 +1,16 @@
 <span class="list-category-container">
-  <button mat-flat-button *ngFor="let category of categories"
-          (click)="clickOnCategory(category.id)"
-          class="category-button"
-          color="primary"
-          [ngClass]="{'active': activeCategory == category.id, 'all': category.isAll }">
-    {{category.description}}</button>
+  <button mat-flat-button *ngIf="showCategoryAll"
+          (click)="clickOnCategoryAll()"
+          class="category-button all"
+          color="primary">
+    {{'PRODUCTS.CATEGORY-ALL-DESCRIPTION'| translate}}
+  </button>
+  <span class="customs-categories">
+    <button mat-flat-button *ngFor="let category of categories"
+            (click)="clickOnCategory(category.id)"
+            class="category-button"
+            color="primary"
+            [ngClass]="{'active': activeCategory == category.id, 'all': category.isAll }">
+      {{category.description}}</button>
+  </span>
 </span>
