Fixed horizontal scroll category list - sticky header

--- a/frontend-pos/src/app/features/products/category-list/category-list.component.html
+++ b/frontend-pos/src/app/features/products/category-list/category-list.component.html
@@ -10,7 +10,7 @@
             (click)="clickOnCategory(category.id)"
             class="category-button"
             color="primary"
-            [ngClass]="{'active': activeCategory == category.id, 'all': category.isAll }">
+            [ngClass]="{'active': activeCategory == category.id }">
       {{category.description}}</button>
   </span>
 </span>
