--- a/frontend-pos/src/app/styles/general.scss
+++ b/frontend-pos/src/app/styles/general.scss
@@ -21,3 +21,13 @@ pos-products {
   flex-direction: column;
   height: 100%;
 }
+
+.intangible {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+}
