Scroll on hover - horizontal scrollbar

--- a/frontend-pos/src/app/features/products/category-list/category-list.component.html
+++ b/frontend-pos/src/app/features/products/category-list/category-list.component.html
@@ -5,10 +5,10 @@
           color="primary">
     {{'PRODUCTS.CATEGORY-ALL-DESCRIPTION'| translate}}
   </button>
-  <span class="example-container" posHorizontalScroll>
+  <span class="example-container">
       <span class="arrow-buttons-scrollbar intangible">
-            <mat-icon (mouseover)="scrollTo('left')" class="material-icons-outlined left">chevron_left</mat-icon>
-            <mat-icon (mouseover)="scrollTo('left')" class="material-icons-outlined right">chevron_right</mat-icon>
+            <mat-icon (mouseover)="scrollTo(direction.left)" (mouseleave)="stopScroll()" class="material-icons-outlined left">chevron_left</mat-icon>
+            <mat-icon (mouseover)="scrollTo(direction.right)" (mouseleave)="stopScroll()" class="material-icons-outlined right">chevron_right</mat-icon>
       </span>
       <span class="customs-categories" posHorizontalScroll>
         <button mat-flat-button *ngFor="let category of categories"
