CSS - Search input

--- a/frontend-pos/src/styles.scss
+++ b/frontend-pos/src/styles.scss
@@ -3,6 +3,7 @@
 @import "app/styles/general";
 @import "app/styles/fonts-size";
 @import "app/styles/snack-bar";
+@import "app/styles/material-form";
 @import "material-icons/iconfont/material-icons.css";
 //@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
