--- a/frontend-pos/src/app/features/basket/basket.component.html
+++ b/frontend-pos/src/app/features/basket/basket.component.html
@@ -1,3 +1,4 @@
+<pos-search-input></pos-search-input>
 <pos-category-list [categories]="categories" [showCategoryAll]="true"></pos-category-list>
 <span class="home-item-container">
   <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
