--- a/frontend-pos/src/app/styles/material-form.scss
+++ b/frontend-pos/src/app/styles/material-form.scss
@@ -1,17 +1,27 @@
 @import "src/app/styles/colors";
 
 mat-form-field {
-  color: red;
+  height: 100%;
+  min-height: 55px;
 
   .mat-mdc-form-field-subscript-wrapper {
     display: none;
+    height: 100%;
+    min-height: 100%;
   }
 
   .mat-mdc-text-field-wrapper {
     border-radius: 10px;
+    height: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .mat-mdc-form-field-focus-overlay {
       background-color: $white;
+      height: 100%;
+      min-height: 100%;
     }
 
     .mat-mdc-form-field-flex {
@@ -19,9 +29,11 @@ mat-form-field {
         display: flex;
         align-items: center;
         padding: 0;
+        height: 100%;
+        min-height: 100%;
 
         label {
-
+          top: 50%;
         }
 
         input {
@@ -48,10 +60,10 @@ mat-form-field {
 
 .point-of-sales-form {
   min-width: 150px;
-  max-width: 500px;
   width: 100%;
   background-color: $white;
   border-radius: 10px;
+  height: 100%;
 }
 
 .point-of-sales-form-field {
