--- a/frontend-pos/src/app/shared/components/search-input/search-input.component.html
+++ b/frontend-pos/src/app/shared/components/search-input/search-input.component.html
@@ -1,12 +1,16 @@
 <form class="point-of-sales-form">
-  <mat-form-field class="point-of-sales-form-field disable-ripple" >
+  <mat-form-field class="point-of-sales-form-field disable-ripple">
     <mat-label *ngIf="label">{{label}}</mat-label>
+    <span matPrefix *ngIf="prefixIcon" class="{{prefixMaterialIconStyle}}">{{prefixIcon}}</span>
+    <button matSuffix mat-icon-button *ngIf="showClear" class="material-icons-outlined" (click)="value=''">close
+    </button>
     <input type="text"
            placeholder="{{placeholder}}"
            aria-label="Number"
            matInput
            [formControl]="myControl"
-           [matAutocomplete]="auto">
+           [matAutocomplete]="auto"
+           [(ngModel)]="value">
     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{option}}
