--- a/frontend-pos/src/app/styles/material-form.scss
+++ b/frontend-pos/src/app/styles/material-form.scss
@@ -4,6 +4,18 @@ mat-form-field {
   height: 100%;
   min-height: 55px;
 
+  &.mat-focused {
+    .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex{
+      .mat-mdc-form-field-icon-prefix {
+        color: $green-medium
+      }
+
+      .mat-mdc-form-field-icon-suffix {
+        color: $red-medium;
+      }
+    }
+  }
+
   .mat-mdc-form-field-subscript-wrapper {
     display: none;
     height: 100%;
@@ -25,6 +37,18 @@ mat-form-field {
     }
 
     .mat-mdc-form-field-flex {
+      .mat-mdc-form-field-icon-prefix {
+        padding: 0;
+        margin: 0 0.5rem;
+        color: $gray-lighter;
+      }
+
+      .mat-mdc-form-field-icon-suffix {
+        padding: 0;
+        margin: 0 0.5rem;
+        color: $red-lighter;
+      }
+
       .mat-mdc-form-field-infix {
         display: flex;
         align-items: center;
