Fixed show all results on focus

--- a/frontend-pos/src/app/shared/components/search-input/search-input.component.html
+++ b/frontend-pos/src/app/shared/components/search-input/search-input.component.html
@@ -8,6 +8,7 @@
            placeholder="{{placeholder}}"
            aria-label="Number"
            matInput
+           (focus)="onFocus($event)"
            [formControl]="myControl"
            [matAutocomplete]="auto"
            [(ngModel)]="value">
