Adding styles to matoption

--- a/frontend-pos/src/app/shared/components/search-input-option/search-input-option.component.html
+++ b/frontend-pos/src/app/shared/components/search-input-option/search-input-option.component.html
@@ -1,1 +1,4 @@
-<span>{{getText()}}</span>
+<span class="lane">
+  <span [innerHTML]="value.getTextToFilter() | highlight: searchText"></span>
+  <span>{{value.getRightTextToShow()}}</span>
+</span>
