--- a/frontend-pos/src/app/features/basket/basket.component.html
+++ b/frontend-pos/src/app/features/basket/basket.component.html
@@ -1,13 +1,17 @@
-<pos-search-input [label]="'BASKET.SEARCH-PRODUCT-BAR-LABEL'|translate"
-                  [placeholder]="'BASKET.SEARCH-PRODUCT-BAR-PLACEHOLDER'|translate"
-                  [prefixIcon]="'search'"
-                  [prefixMaterialIconStyle]="'material-icons-outlined'"
-                  [options]="options"
-                  (onSelect)="onSelectOption($event)">
+<div class="basket-container">
+  <pos-search-input [label]="'BASKET.SEARCH-PRODUCT-BAR-LABEL'|translate"
+                    [placeholder]="'BASKET.SEARCH-PRODUCT-BAR-PLACEHOLDER'|translate"
+                    [prefixIcon]="'search'"
+                    [prefixMaterialIconStyle]="'material-icons-outlined'"
+                    [options]="options"
+                    (onSelect)="onSelectOption($event)">
+  </pos-search-input>
+  <span class="action-buttons rounded-corners"></span>
+  <pos-category-list [categories]="categories" [showCategoryAll]="true"></pos-category-list>
+  <span class="products-wrapper">
+    <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
+  </span>
+  <pos-order-selector class="rounded-corners"></pos-order-selector>
+</div>
 
-  <!--  <pos-search-input-option *ngFor="let option of options | async" [value]="option" ></pos-search-input-option>-->
-</pos-search-input>
-<pos-category-list [categories]="categories" [showCategoryAll]="true"></pos-category-list>
-<span class="home-item-container">
-  <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
-</span>
+
