--- a/frontend-pos/src/app/features/basket/basket.component.scss
+++ b/frontend-pos/src/app/features/basket/basket.component.scss
@@ -1,20 +1,57 @@
-span.home-item-container {
-  padding: 0 10px;
+$grid-gap: 0.5rem;
+
+
+div.basket-container {
+  margin: $grid-gap;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-  overflow-y: auto;
+  grid-template-columns: 5fr 2fr 3fr;
+  grid-template-rows: 0.7fr 0.7fr 10fr;
+  grid-template-areas:
+    'search-input action-buttons order-selector'
+    'category-list category-list order-selector'
+    'products-wrapper products-wrapper order-selector';
   height: 100%;
-}
+  gap: $grid-gap;
+  align-items: center;
+  justify-content: center;
 
-pos-category-list {
-  height: 40px;
-  display: block;
-  margin: 5px 0;
-}
+  pos-search-input {
+    grid-area: search-input;
+    height: 100%;
+  }
 
-pos-search-input {
-  height: 50px;
+  pos-category-list {
+    grid-area: category-list;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    display: block;
+    margin: 5px 0;
+  }
+
+  span.action-buttons {
+    grid-area: action-buttons;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+  }
+
+  pos-order-selector {
+    grid-area: order-selector;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+  }
+
+  span.products-wrapper {
+    grid-area: products-wrapper;
+    padding: 0 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow-y: auto;
+    height: 100%;
+  }
 }
