--- a/frontend-pos/src/styles.scss
+++ b/frontend-pos/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "app/styles/colors";
+@import "app/styles/buttons";
 @import "app/styles/general";
 @import "app/styles/fonts-size";
 @import "app/styles/snack-bar";
