--- a/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
+++ b/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
@@ -1,19 +1,16 @@
 span.panel-order-selector-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, 1fr) 2fr repeat(2, 1fr);
-  grid-template-areas: 'current-order-container'
-  'order-selector-container'
-  'items-container'
-  'subtotal-container'
-  'finish-order';
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  & * {
+    //flex-grow: 1;
+  }
 
   span.current-order-container {
     display: flex;
     flex-direction: row;
     align-items: center;
-    grid-area: current-order-container;
 
     span.current-order-text {
       &::after {
@@ -39,16 +36,16 @@ span.panel-order-selector-container {
     }
   }
 
-  span.order-selector-container{
-    grid-area: order-selector-container;
+  span.order-selector-container {
   }
+
   span.items-container {
     grid-area: items-container;
     overflow-y: auto;
+    flex-grow: 1;
   }
 
   span.subtotal-container {
-    grid-area: subtotal-container;
 
     span.subtotal-text {
       &::after {
@@ -57,8 +54,9 @@ span.panel-order-selector-container {
     }
   }
 
-  button.finish-order {
-    grid-area: finish-order;
-    width: 100%;
+  span.finish-order-wrapper {
+    button.finish-order {
+
+    }
   }
 }
