--- a/frontend-pos/src/app/styles/fonts.scss
+++ b/frontend-pos/src/app/styles/fonts.scss
@@ -27,3 +27,10 @@ $font-size-20-points: 20px;
 $font-size-18-points: 18px;
 $font-size-16-points: 16px;
 $font-size-14-points: 14px;
+
+.fw-700 {
+  font-weight: 700 !important;
+}
+
+
+
