--- a/frontend-pos/src/styles.scss
+++ b/frontend-pos/src/styles.scss
@@ -2,7 +2,7 @@
 @import "app/styles/colors";
 @import "app/styles/buttons";
 @import "app/styles/general";
-@import "app/styles/fonts-size";
+@import "app/styles/fonts";
 @import "app/styles/snack-bar";
 @import "app/styles/material-form";
 @import "material-icons/iconfont/material-icons.css";
