--- a/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.html
+++ b/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.html
@@ -1,20 +1,20 @@
 <span class="panel-order-selector-container">
   <span class="current-order-container">
-    <span class="current-order-text">{{'BASKET.ORDER-SELECTOR.CURRENT-ORDER' | translate}}</span>
-    <span class="current-order-indicator">{{currentOrder + 1}}</span>
-    <button class="delete-order" color="warn" mat-flat-button>
+    <span class="current-order-text fw-700">{{'BASKET.ORDER-SELECTOR.CURRENT-ORDER' | translate}}</span>
+    <span class="current-order-indicator fw-700">{{currentOrder + 1}}</span>
+    <button class="delete-order" color="warn" mat-flat-button [matTooltip]="'BASKET.ORDER-SELECTOR.DELETE-ORDER' | translate">
       <mat-icon class="material-icons-outlined">delete</mat-icon>
     </button>
   </span>
   <span class="order-selector-container">Buttons here</span>
-  <span class="items-container"> ITEMS HERE</span>
+  <span class="items-container">ITEMS HERE</span>
   <span class="subtotal-container">
-    <span class="subtotal-text">{{'BASKET.ORDER-SELECTOR.SUBTOTAL'| translate}}</span>
+    <span class="subtotal-text fw-700">{{'BASKET.ORDER-SELECTOR.SUBTOTAL'| translate}}</span>
     <span
       class="subtotal-amount">{{orders[currentOrder].total| currency:'$': 'symbol-narrow':'1.2-2': 'es-Ar' }}</span>
   </span>
   <span class="finish-order-wrapper">
-    <button class="finish-order white-font" color="primary"
+    <button class="finish-order white-font fw-700" color="primary"
             mat-flat-button>{{'BASKET.ORDER-SELECTOR.FINISH-ORDER' | translate}}</button>
   </span>
 </span>
