--- a/frontend-pos/src/app/shared/components/item-card/item-card.component.scss
+++ b/frontend-pos/src/app/shared/components/item-card/item-card.component.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/colors";
-@import "../../../styles/fonts-size";
+@import "../../../styles/fonts";
 
 div.item-card-container {
   display: flex;
