--- a/frontend-pos/src/app/styles/fonts.scss
+++ b/frontend-pos/src/app/styles/fonts.scss
@@ -28,6 +28,9 @@ $font-size-18-points: 18px;
 $font-size-16-points: 16px;
 $font-size-14-points: 14px;
 
+$font-size-1-5-rem: 1.5rem;
+$font-size-1-25-rem: 1.25rem;
+
 .fw-700 {
   font-weight: 700 !important;
 }
